ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: todo-ingress
  namespace: daniel-geelen
spec:
  ingressClassName: nginx
  rules:
  - host: daniel-geelen.dev.pmc.internal.uipath.systems
    http:
      paths:
      - backend:
          service:
            name: todo-backend-service
            port:
              number: 80
        path: /api
        pathType: Prefix
      - backend:
          service:
            name: todo-frontend-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - daniel-geelen.dev.pmc.internal.uipath.systems
    secretName: todo-tls-cert
